cmake_minimum_required(VERSION 2.8)

project(PED_PLUGINS)

set(MENGE_EXE_DIR ${CMAKE_SOURCE_DIR}/../../Exe) 
if ( ${CMAKE_BUILD_TYPE} MATCHES "Debug" )
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MENGE_EXE_DIR}/plugins/debug)
else ( ${CMAKE_BUILD_TYPE} MATCHES "Debug" )
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MENGE_EXE_DIR}/plugins)
ENDIF ( ${CMAKE_BUILD_TYPE} MATCHES "Debug" )
set(PLUGIN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../../src/Plugins)
set(MENGE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../../src/Menge)
set(MENGE_LIB_DIR ${CMAKE_BINARY_DIR}/lib )

link_directories( ${MENGE_LIB_DIR}/)

INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/BFSM)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/viewer)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/SceneGraph)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/Math)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/Agents)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/Runtime)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/resources)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/PluginEngine)
INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/tinyxml)

#find the correct OpenMP flag
FIND_PACKAGE(OpenMP)
if(OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS} -fpermissive")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

# Model dlls
ADD_SUBDIRECTORY(aircraft)
ADD_SUBDIRECTORY(FundamentalDiagram)
ADD_SUBDIRECTORY(Terrain)
ADD_SUBDIRECTORY(Formations)
ADD_SUBDIRECTORY(AgtDummy)
ADD_SUBDIRECTORY(AgtHelbing)
ADD_SUBDIRECTORY(AgtJohansson)
ADD_SUBDIRECTORY(AgtKaramouzas)
ADD_SUBDIRECTORY(AgtZanlungo)
#ADD_SUBDIRECTORY(Sample)

set( CMAKE_INSTALL_ALWAYS true )