cmake_minimum_required(VERSION 2.8)

project(MENGE_VIS)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MENGE_EXE_DIR})

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
INCLUDE_DIRECTORIES(${SDL2IMAGE_INCLUDE_DIRS})

PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
INCLUDE_DIRECTORIES(${SDL2TTF_INCLUDE_DIRS})

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})

file(
	GLOB_RECURSE
	source_files
	${MENGE_SRC_DIR}/MengeVis/*.cpp
	${MENGE_SRC_DIR}/MengeVis/*.h
)

add_library(
	mengeVis
	SHARED
	${database_files}
	${source_files}
)

target_link_libraries ( mengeVis
  mengeCore
  dl
  tinyxml
  ${OPENGL_LIBRARIES}
  ${SDL2_LIBRARIES}
  ${SDL2IMAGE_LIBRARIES}
  ${SDL2TTF_LIBRARIES}
  )

install( TARGETS mengeVis DESTINATION ${LIBRARY_OUTPUT_PATH} )
